--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #f9f7f7;
   --foreground: #171717;
 }
 
@@ -16,6 +16,6 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: red;
   font-family: Arial, Helvetica, sans-serif;
 }
